2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Fix progress_func and set timeout to 0.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: ADD NEARLINE storage.
	* man/xml-source/amanda-devices.7.xml: Document NEARLINE storage.

2015-04-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c (progress_function): Fail on timeout.
	* device-src/s3-device.h (_S3_by_thread): Add tiemout.
	* device-src/s3.c (RESULT_HANDLING_ALWAYS_RETRY): Add
	  CURLE_ABORTED_BY_CALLBACK.

2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix wrong variable.

2015-04-28  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl (backup): Create an archive directory
	  with the same permission as the data directory.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Fix status.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Add new messages.
	* perl/Amanda/Changer/multi.pm (update): Allow 'error' for the slot
	  range.
	* perl/Amanda/Changer/robot.pm (update): Allow 'error' for the slot
	  range.
	* installcheck/Amanda_Changer_robot.pl: Fix.
	* server-src/amtape.pl: Fix for new messages.
	* man/xml-source/amanda-changers.7.xml: Add error keyword.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (set_error_to_unknown): New function
	  that allow the tapescan to reset all slots with given error.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Vault.pm: Create timer once.

2015-04-27  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/extract_list.c: Abort a restore if application fail.

2015-04-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm: Improve parsing if a line is misquoted.

2015-04-22  Xu Han <xhan@zmanda.com>
	* server-src/amanda-rest-server.pl: exit code 1 when start fails
