@@ -54,7 +54,7 @@ char *logtype_str[] = {
 char *program_str[] = {
     "UNKNOWN", "planner", "driver", "amreport", "dumper", "chunker",
     "taper", "amflush", "amdump", "amidxtaped", "amfetchdump", "amcheckdump",
-    "amvault",
+    "amvault", "amcleanup"
 };
 
 int curlinenum;
