@@ -59,7 +59,7 @@ typedef enum logtype_e {
 typedef enum program_e {
     P_UNKNOWN, P_PLANNER, P_DRIVER, P_REPORTER, P_DUMPER, P_CHUNKER,
     P_TAPER, P_AMFLUSH, P_AMDUMP, P_AMIDXTAPED, P_AMFETCHDUMP, P_AMCHECKDUMP,
-    P_AMVAULT, P_SENTINEL
+    P_AMVAULT, P_AMCLEANUP, P_SENTINEL
 } program_t;
 #define P_LAST (P_SENTINEL-1)
 
